# tugas-besar-1-nul

./: .clang-format  .gitignore  CMakeLists.txt  README.md  SPESIFIKASI.md  makefile
class-design/: 01_overview_layer.puml  02_tile_hierarchy.puml  03_property_card.puml  04_player_game.puml  05_io_saveload.puml  06_bonus_gui_com_dynamic.puml  NIMONSPOLI_SPEC.md
config/: property.txt  railroad.txt  tax.txt
include/board/: Board.hpp
include/card/: ChanceCard.hpp  CommunityChestCard.hpp  DeckCard.hpp  DemolitionCard.hpp  DiscountCard.hpp  LassoCard.hpp  MoveCard.hpp  ShieldCard.hpp  SkillCard.hpp  TeleportCard.hpp  card.hpp
include/config/: ActionTileData.hpp  Config.hpp  ConfigDriver.hpp  ConfigValidator.hpp  MiscConfig.hpp  PropertyData.hpp  RailroadConfig.hpp  SpecialConfig.hpp  TaxConfig.hpp  UtilityConfig.hpp
include/core/: AuctionManager.hpp  BankruptcyManager.hpp  Command.hpp  CommandHandler.hpp  ConfigLoader.hpp  Dice.hpp  GameEngine.hpp  GameManager.hpp  SaveLoadManager.hpp  TransactionLogger.hpp  TurnContext.hpp  TurnManager.hpp
include/exception/: BankruptcyException.hpp  CardSlotFullException.h  CardSlotFullException.hpp  CommandException.h  CommandException.hpp  ConfigException.h  ConfigException.hpp  InsufficientFundsException.h  InsufficientFundsException.hpp  InvalidGameStateException.h  InvalidGameStateException.hpp  NimonspoliException.h  NimonspoliException.hpp  SaveLoadException.h  SaveLoadException.hpp
include/gui/: GuiPanelManager.hpp  GuiRenderer.hpp
include/player/: BotPlayer.hpp  Player.h  Player.hpp
include/property/: Property.hpp  PropertyStatus.hpp  RailroadProperty.hpp  StreetProperty.hpp  UtilityProperty.hpp
include/states/: CardState.hpp  GameState.hpp  LogEntry.hpp  PlayerState.hpp  PropertyState.hpp  StateParser.hpp  StateSerializer.hpp
include/tile/: ActionTile.hpp  PropertyTile.hpp  Tile.hpp
include/utils/: ParseUtils.hpp  SerializeUtils.hpp
src/: main.cpp
src/board/: Board.cpp  Board.hpp
src/card/: ChanceCard.cpp  CommunityChestCard.cpp  DemolitionCard.cpp  DiscountCard.cpp  LassoCard.cpp  LassoCard.hpp  MoveCard.cpp  ShieldCard.cpp  SkillCard.cpp  TeleportCard.cpp  card.cpp
src/config/: ActionTileData.cpp  Config.cpp  ConfigDriver.cpp  ConfigValidator.cpp  MiscConfig.cpp  PropertyData.cpp  RailroadConfig.cpp  SpecialConfig.cpp  TaxConfig.cpp  UtilityConfig.cpp
test/: test_config_validation.cpp  test_save_load.cpp
(+50 files in other folders)
